...
    return <View>
        <TableHeader columns={header}/>
        <FlatList data={rowResult.value} renderItem={renderRow}/>
    </View>
}

const TableRow: React.FC<RowData> = ({cells}) => <View testID={"row"} style={styles.tableRow}>{cells.map(TableCell)}</View>

const TableCell: React.FC<Cell> = ({value, key, width}) =>
    <View key={key} style={{width: width || 'auto'}}>
        { typeof value != 'object' ? <Text style={styles.text}>{value}</Text> : value }
    </View>

...
